--- a/index.html
+++ b/index.html
@@ -257,6 +257,11 @@
                             <div class="photo-tags">
                                 <span class="tag">Dart</span>
                                 <span class="tag">Firebase</span>
+                                <span class="tag">SMS Alert</span>
+                                <span class="tag">Realtime Location Tracking</span>
+                                <span class="tag">Audio Recording</span>
+                                <span class="tag">Secured QR Code</span>
+                                <span class="tag">Emergency reponse</span>
                             </div>
                             <div class="photo-buttons">
                                 
